[gd_scene load_steps=4 format=3 uid="uid://b8qxk7r3yw5p3"]

[ext_resource type="Script" path="res://scenes/ui/game_over.gd" id="1_game_over"]

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"fade_in": SubResource("Animation_fade_in")
}

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_game_over")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="GameOverLabel" type="Label" parent="Panel/VBoxContainer/TitleMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="SurvivalTimeLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Tiempo sobrevivido: 0:00"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Enemigos eliminados: 0"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
process_mode = 3
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "REINTENTAR"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/ButtonsContainer"]
process_mode = 3
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "SALIR"

[node name="BottomMargin" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}
